fix: cleans spacing on capabilities pages and in hero component

--- a/src/capabilities/design/design.scss
+++ b/src/capabilities/design/design.scss
@@ -9,7 +9,7 @@
     background-color: #f9fafc;
   }
 
-  &.bottom-gutter {
+  &.bottom-offset {
     padding-bottom: 150px;
   }
 
