--- a/src/capabilities/strategy/strategy.scss
+++ b/src/capabilities/strategy/strategy.scss
@@ -10,7 +10,7 @@
     background-color: #f9fafc;
   }
 
-  &.bottom-gutter {
+  &.bottom-offset {
     padding-bottom: 150px;
   }
 
